--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "next": "^14.2.0",
+    "notion-client": "^7.7.3",
+    "prismjs": "^1.30.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "react-notion-x": "^7.7.3"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
